--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Binaries for programs and plugins
+bin
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+
+# Any temp results you may generate using the tool
+*.txt
 
 # Test binary, built with `go test -c`
 *.test
@@ -11,6 +15,3 @@ fixtures/*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
